VulkanCompute/radiance_cascades_2d/error2.log
install
+- install ZigVulkanCompute_RadianceCascades
   +- compile exe ZigVulkanCompute_RadianceCascades Debug native 1 errors
main.zig:802:37: error: no field named 'blend' in struct 'main.AccumConstants'
        const ac = AccumConstants{ .blend = effective_blend };
                                    ^~~~~
main.zig:117:31: note: struct declared here
const AccumConstants = extern struct {
                       ~~~~~~~^~~~~~
referenced by:
    main: main.zig:199:12
    callMain [inlined]: C:\Users\nguye\scoop\apps\zig\0.15.2\lib\std\start.zig:618:22
    callMainWithArgs [inlined]: C:\Users\nguye\scoop\apps\zig\0.15.2\lib\std\start.zig:587:20
    main: C:\Users\nguye\scoop\apps\zig\0.15.2\lib\std\start.zig:602:28
    1 reference(s) hidden; use '-freference-trace=5' to see all references
error: the following command failed with 1 compilation errors:
"C:\\Users\\nguye\\scoop\\apps\\zig\\0.15.2\\zig.exe" build-exe -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\imgui.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\imgui_demo.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\imgui_draw.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\imgui_tables.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\imgui_widgets.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\dcimgui.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\backends\\imgui_impl_vulkan.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\backends\\dcimgui_impl_vulkan.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\backends\\imgui_impl_win32.cpp" -cflags -DIMGUI_IMPL_VULKAN_NO_PROTOTYPES -- "G:\\Projects\\SandboxDev\\VulkanCompute\\cimgui\\dcimgui\\backends\\dcimgui_impl_win32.cpp" -lvulkan-1 -lgdi32 -luser32 -ldwmapi -ODebug -I "C:\\VulkanSDK\\1.4.335.0\\Include" -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui" -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui\\backends" -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui" -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui\\backends" -L "C:\\VulkanSDK\\1.4.335.0\\Lib" --dep vulkan_window --dep vulkan_compute --dep imgui_backend "-Mroot=G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\main.zig" -ODebug -I "C:\\VulkanSDK\\1.4.335.0\\Include" "-Mvulkan_window=G:\\Projects\\SandboxDev\\VulkanCompute\\vulkan\\vulkan_window.zig" -ODebug -I "C:\\VulkanSDK\\1.4.335.0\\Include" "-Mvulkan_compute=G:\\Projects\\SandboxDev\\VulkanCompute\\vulkan\\vulkan_compute.zig" -ODebug -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui" -I "G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\..\\cimgui\\dcimgui\\backends" -I "C:\\VulkanSDK\\1.4.335.0\\Include" --dep vulkan_window "-Mimgui_backend=G:\\Projects\\SandboxDev\\VulkanCompute\\radiance_cascades_2d\\imgui_backend.zig" -lc++ -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\nguye\\AppData\\Local\\zig" --name ZigVulkanCompute_RadianceCascades --zig-lib-dir "C:\\Users\\nguye\\scoop\\apps\\zig\\0.15.2\\lib\\" --listen=-

Build Summary: 0/3 steps succeeded; 1 failed
install transitive failure
+- install ZigVulkanCompute_RadianceCascades transitive failure
   +- compile exe ZigVulkanCompute_RadianceCascades Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache\o\d8c4323986ece2181bc513fd290568e4\build.exe C:\Users\nguye\scoop\apps\zig\0.15.2\zig.exe C:\Users\nguye\scoop\apps\zig\0.15.2\lib G:\Projects\SandboxDev\VulkanCompute\radiance_cascades_2d .zig-cache C:\Users\nguye\AppData\Local\zig --seed 0xb05842f9 -Zbbf19c0153c7bbea
